[package]
name = "cryptopals"
version = "0.1.0"
authors = ["Mike Tang <daogangtang@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.10"
hex = "0.3"
hamming = "0.1"

[[bin]]
name = "hex2base64"
path = "src/hex2base64.rs"

[[bin]]
name = "fixedxor"
path = "src/fixedxor.rs"

[[bin]]
name = "sbxc"
path = "src/sbxc.rs"

#
[[bin]]
name = "c6"
path = "src/break-repeating-key-xor.rs"

